--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="register">
 <head>
   <title>Angular Cash Register</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  
+
   <!-- Your code here  -->
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.10/angular.min.js"></script>
+  <script src="controllers.js"></script>
 </body>
 </html>
